# MAWAR-T-Lite

./: .gitignore  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_SPEC.md  app.py  pyproject.toml  requirements.txt
assets/css/: custom_styles.css
components/: __init__.py  data_table.py  header.py  metric_card.py  stock_card.py
config/: __init__.py  settings.py  stocks_list.py  theme.py
modules/: __init__.py  dashboard.py  data_fetcher.py  portfolio.py  predictor.py
tests/: test_calculations.py  test_data_fetcher.py  test_portfolio.py  test_predictor.py  test_validators.py
utils/: __init__.py  calculations.py  charts.py  storage.py  validators.py
