[project]
name = "mawar-lite"
version = "0.1.0"
description = "Bloomberg Terminal-inspired stock market analytics platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.28.0",
    "yfinance>=0.2.30",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=modules --cov=utils"

[tool.coverage.run]
source = ["modules", "utils", "config"]
omit = ["tests/*", "venv/*"]
